se agrega mensaje en add/rm favoritos

--- a/src/global.scss
+++ b/src/global.scss
@@ -33,6 +33,10 @@
   color: var(--ion-color-primary) !important;
 }
 
+.tab-selected {
+  color: var(--ion-color-primary) !important;
+}
+
 .noticias-source-name {
   font-size: 16px;
   color: lightgray;
